--- a/3-longest-substring-without-repeating-characters/v2.MD
+++ b/3-longest-substring-without-repeating-characters/v2.MD
@@ -1,44 +1,34 @@
 ```ts
 const isCharExist = (target: string, longest: string[]): boolean =>
-    longest.includes(target);
+  longest.includes(target);
 
-const shiftUntilFound = (target: string, longest: string[]): void => {
-    const shift = longest.shift();
-    if (target !== shift) {
-        shiftUntilFound(target, longest);
-    }
+const shiftOutUntilFound = (target: string, longest: string[]): string[] => {
+  const shift = longest.shift();
+  return target !== shift ? shiftOutUntilFound(target, longest) : longest;
 };
 
-const shift = (
-    isShift: boolean,
-    target: string,
-    longest: string[],
-    max: number,
-): [string, number] => {
-    if (isShift) {
-        max = longest.length > max ? longest.length : max;
-        shiftUntilFound(target, longest);
-    }
-    return [target, max];
+const findLatestLongestLength = (
+  target: string,
+  longest: string[],
+  max: number
+): number => {
+  let prevMax = max;
+  if (isCharExist(target, longest)) {
+    prevMax = Math.max(longest.length, max);
+    longest = shiftOutUntilFound(target, longest);
+  }
+  longest.push(target);
+  return Math.max(prevMax, longest.length);
 };
 
-// leetcode provided func type
-const lengthOfLongestSubstring = (s: string): number => {
-    const longest: string[] = [];
-    let max = 0;
+const lengthOfLongestSubstring = (input: string): number => {
+  const longest: string[] = [];
+  let max = 0;
 
-    for (let i = 0; i < s.length; i++) {
-        const first = s[i];
-        const [needAppend, currentMax] = shift(
-            isCharExist(first, longest),
-            first,
-            longest,
-            max,
-        );
-        max = currentMax;
-        longest.push(needAppend);
-    }
-    const currentMax = longest.length;
-    return currentMax > max ? currentMax : max;
+  for (let i = 0; i < input.length; i++) {
+    max = findLatestLongestLength(input[i], longest, max);
+  }
+
+  return max;
 };
 ```
