--- a/3-longest-substring-without-repeating-characters/v2.MD
+++ b/3-longest-substring-without-repeating-characters/v2.MD
@@ -2,9 +2,9 @@
 const isCharExist = (target: string, longest: string[]): boolean =>
   longest.includes(target);
 
-const shiftOutUntilFound = (target: string, longest: string[]): string[] => {
+const shiftOutTilFound = (target: string, longest: string[]): string[] => {
   const shift = longest.shift();
-  return target !== shift ? shiftOutUntilFound(target, longest) : longest;
+  return target !== shift ? shiftOutTilFound(target, longest) : longest;
 };
 
 const findLatestLongestLength = (
@@ -15,10 +15,10 @@ const findLatestLongestLength = (
   let prevMax = max;
   if (isCharExist(target, longest)) {
     prevMax = Math.max(longest.length, max);
-    longest = shiftOutUntilFound(target, longest);
+    longest = shiftOutTilFound(target, longest);
   }
   longest.push(target);
-  return Math.max(prevMax, longest.length);
+  return Math.max(longest.length, prevMax);
 };
 
 const lengthOfLongestSubstring = (input: string): number => {
@@ -26,7 +26,7 @@ const lengthOfLongestSubstring = (input: string): number => {
   let max = 0;
 
   for (let i = 0; i < input.length; i++) {
-    max = findLatestLongestLength(input[i], longest, max);
+    max = findLatestLongestLength(input.charAt(i), longest, max);
   }
 
   return max;
