--- a/3-longest-substring-without-repeating-characters/v2.MD
+++ b/3-longest-substring-without-repeating-characters/v2.MD
@@ -1,10 +1,10 @@
 ```ts
-const isCharExist = (target: string, longest: string[]): boolean =>
+const isCharDuplicated = (target: string, longest: string[]): boolean =>
   longest.includes(target);
 
-const shiftOutTilFound = (target: string, longest: string[]): string[] => {
+const shiftOutTilFoundDuplicated = (target: string, longest: string[]): string[] => {
   const shift = longest.shift();
-  return target !== shift ? shiftOutTilFound(target, longest) : longest;
+  return target !== shift ? shiftOutTilFoundDuplicated(target, longest) : longest;
 };
 
 const findLatestLongestLength = (
@@ -13,22 +13,21 @@ const findLatestLongestLength = (
   max: number
 ): number => {
   let prevMax = max;
-  if (isCharExist(target, longest)) {
+  if (isCharDuplicated(target, longest)) {
     prevMax = Math.max(longest.length, max);
-    longest = shiftOutTilFound(target, longest);
+    longest = shiftOutTilFoundDuplicated(target, longest);
   }
   longest.push(target);
   return Math.max(longest.length, prevMax);
 };
 
+// leetcode provided func type
 const lengthOfLongestSubstring = (input: string): number => {
   const longest: string[] = [];
   let max = 0;
-
   for (let i = 0; i < input.length; i++) {
     max = findLatestLongestLength(input.charAt(i), longest, max);
   }
-
   return max;
 };
 ```
