--- a/3-longest-substring-without-repeating-characters/v4.MD
+++ b/3-longest-substring-without-repeating-characters/v4.MD
@@ -14,24 +14,22 @@ const removeOldOneTilFoundDuplicated = (
 
 const findLatestLongestLength = (
   target: string,
-  longest: string[],
-  max: number
-): number => {
-  let prevMax = max;
+  longest: string[]
+): string[] => {
   if (isCharDuplicated(target, longest)) {
-    prevMax = Math.max(longest.length, max);
     longest = removeOldOneTilFoundDuplicated(target, longest);
   }
   longest.push(target);
-  return Math.max(longest.length, prevMax);
+  return longest;
 };
 
 // main
 const lengthOfLongestSubstring = (input: string): number => {
-  const longest: string[] = [];
+  let longest: string[] = [];
   let max = 0;
   for (let i = 0; i < input.length; i++) {
-    max = findLatestLongestLength(input.charAt(i), longest, max);
+    longest = findLatestLongestLength(input.charAt(i), longest);
+    max = Math.max(longest.length, max);
   }
   return max;
 };
