--- a/3-longest-substring-without-repeating-characters/v3.MD
+++ b/3-longest-substring-without-repeating-characters/v3.MD
@@ -25,7 +25,7 @@ const findLatestLongest = (
   if (charIndexStored.has(char)) {
     longest = removeOldestTilDuplicatedOne(longest, char, charIndexStored);
   }
-  longest.push(char);
+  longest.push(cha.r);
   charIndexStored.set(char, currentCharIndex);
   return longest;
 };
