--- a/3-longest-substring-without-repeating-characters/v4.MD
+++ b/3-longest-substring-without-repeating-characters/v4.MD
@@ -2,22 +2,22 @@
 const isCharDuplicated = (target: string, longest: string[]): boolean =>
   longest.includes(target);
 
-const removeOldOneTilFoundDuplicated = (
+const removeOldestTilDuplicatedOne = (
   target: string,
   longest: string[]
 ): string[] => {
   const shift = longest.shift();
-  return target !== shift
-    ? removeOldOneTilFoundDuplicated(target, longest)
+  return shift !== target
+    ? removeOldestTilDuplicatedOne(target, longest)
     : longest;
 };
 
-const findLatestLongestLength = (
+const findLatestLongest = (
   target: string,
   longest: string[]
 ): string[] => {
   if (isCharDuplicated(target, longest)) {
-    longest = removeOldOneTilFoundDuplicated(target, longest);
+    longest = removeOldestTilDuplicatedOne(target, longest);
   }
   longest.push(target);
   return longest;
@@ -28,7 +28,7 @@ const lengthOfLongestSubstring = (input: string): number => {
   let longest: string[] = [];
   let max = 0;
   for (let i = 0; i < input.length; i++) {
-    longest = findLatestLongestLength(input.charAt(i), longest);
+    longest = findLatestLongest(input.charAt(i), longest);
     max = Math.max(longest.length, max);
   }
   return max;
