v1 done for 5-longest-palindromic-substring

--- a/3-longest-substring-without-repeating-characters/v4.MD
+++ b/3-longest-substring-without-repeating-characters/v4.MD
@@ -12,10 +12,7 @@ const removeOldestTilDuplicatedOne = (
     : longest;
 };
 
-const findLatestLongest = (
-  target: string,
-  longest: string[]
-): string[] => {
+const findLatestLongest = (target: string, longest: string[]): string[] => {
   if (isCharDuplicated(target, longest)) {
     longest = removeOldestTilDuplicatedOne(target, longest);
   }
